basiliq/src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__normal_obj__obj_single_field.snap
---
source: basiliq/src/serve/tests/requests/update/obj/normal_obj.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "[uuid]",
    "attributes": {
      "age": 22,
      "first-name": "OH NO",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    }
  }
}
