basiliq/src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__normal_obj__set_mandatory_to_null.snap
---
source: basiliq/src/serve/tests/requests/update/obj/normal_obj.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "BadJson",
    "detail": "Can't force mandatory key to null `first-name` at line 1 column 19"
  }
}
